# cargo-generate

./: LICENSE  README.md
rust-web-template-generate/: Cargo.toml  Dockerfile  app.yml  build.rs  cargo-generate.toml  docker-compose.yml
rust-web-template-generate/assets/: README.md  package-lock.json  package.json  tailwind.config.js
rust-web-template-generate/assets/f/css/: app.css  style.css
rust-web-template-generate/assets/f/js/: app.js  src.js
rust-web-template-generate/src/: main.rs
rust-web-template-generate/templates/: _index.html  index.html  ok.html  root.html
