[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["{{project-author}} <{{project-email}}>"]
description = "{{project-description}}"

[dependencies]
log = "0.4.27"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
axum-htmx = { version = "0.7.0", features = ["tokio"] }
minijinja = { version = "2.8.0", features = ["loader", "builtins"] }
include_dir = "0.7.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
mime_guess = "2.0.5"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
clap = { version = "4.5.37", features = ["derive", "env"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
minijinja-embed = "2.10.2"
metrics-process = "2.4.0"
axum-prometheus = "0.8.0"

[build-dependencies]
minijinja-embed = "2.10.2"